待更新名单

--- a/src/less/common.less
+++ b/src/less/common.less
@@ -1,6 +1,6 @@
 @white: #fafafa;
 @text-color:@white;
-@yellow: #ffbc13;
+@yellow: #dc1e12;
 @dark-yellow:saturate(@yellow,-15%);
 
 .margin-top-20{
@@ -40,13 +40,18 @@ body{
 }
 
 .main{
-  background-color: rgba(0,0,0,0.5);
+  background-color: rgba(0,0,0,0.7);
   height:100%;
 }
 
 .content{
-  .center;
+  //.center;
   align-items:center;
-  padding-top:200px;
-  padding-bottom: 120px;
+  padding-top:50px;
+  padding-left:20px;
+  font-size:1.2em;
+  li{
+    list-style:decimal;
+    line-height: 1.8em;
+  }
 }
