--- a/src/less/home.less
+++ b/src/less/home.less
@@ -1,28 +1,26 @@
 @import "common.less";
-
+@buttonSize:80px;
 .button{
-    margin-bottom:30px;
     border:none;
-    border-radius: 4px;
+    border-radius: 50%;
     outline:none;
     cursor: pointer;
-    background-color:@dark-yellow;
-    padding:10px 20px;
+    background-color:@yellow;
     color:@white;
     font-size:20px;
     font-weight:100;
-    min-width: 150px;
-    line-height: 1;
     white-space: nowrap;
     text-align: center;
-    letter-spacing: .3em;
     &:active{
-      background-color:@yellow;
+      background-color:@dark-yellow;
     }
+    width:@buttonSize;
+    height:@buttonSize;
 }
 
 .submit{
-  .center;
-  margin-top:50px;
-  margin-bottom:20px;
+  position:absolute;
+  bottom:10%;
+  left:40%;
+  right:20%;
 }
